--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 	<!-- AOS CSS link -->
 	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 	<!-- title -->
-	<title>Portfolio</title>
+	<title>Usless Portfolio</title>
+	<link rel="shorcut icon" type="image/png" href="./img/error-404.png">
 </head>
 <body>
 	<!-- header section -->
